--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,56 @@
-# ~/.config/tmux.conf
+# Assumes that this file is at ~/.config/tmux.conf. Change to your $XDG_CONFIG_HOME as necessary.
 
+# true color
 set -sa terminal-overrides ",xterm*:Tc"
 set -g default-terminal "tmux-256color"
+
+# reload config
+unbind r
+bind r source-file "~/.config/tmux/tmux.conf"
+
+# mouse support
+set -g mouse on
+
+# more ergonomic leader
+set -g prefix C-s
+
+# plugins
+# all of this should be at the bottom of the file, add all additional config above ^
+
+# will install plugins to $XDG_CONFIG_HOME/tmux/plugins/ or, if that $XDG_CONFIG_HOME/tmux/tmux.confg does not exist, ~/.tmux/plugins
+set -g @plugin "tmux-plugins/tpm"
+
+# <leader>-I to install plugins
+# <leader>-U to update plugins
+# <leader>-M-u to remove undeclared plugins (translation: ctrl-s alt-u)
+
+# pulls from https://github.com/%s unless specified
+# set -g @plugin "owner/repo"
+
+# theme
+# modified from https://github.com/catppuccin/tmux?tab=readme-ov-file#config-3
+set -g @plugin "catppuccin/tmux"
+set -g @catppuccin_flavour "mocha"
+
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
+
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
+
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W"
+
+set -g @catppuccin_status_modules_right "directory session"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_right_separator_inverse "no"
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+
+set -g @catppuccin_directory_text "#{pane_current_path}"
+
+# must be at the very bottom of the file
+run "~/.config/tmux/plugins/tpm/tpm"
