licensed under GPL-3.0-or-later

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,15 @@
+# SPDX-License-Identifier: GPL-3.0-or-later
+#
+# Copyright © 2024 RemasteredArch
+#
+# This file is part of tmux-config.
+#
+# tmux-config is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
+#
+# tmux-config is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License along with tmux-config, found in <./LICENSE>. If not, see <https://www.gnu.org/licenses/>.
+
 # Assumes that this file is at ~/.config/tmux.conf. Change to your $XDG_CONFIG_HOME as necessary.
 
 # true color
