--- a/tmux.conf
+++ b/tmux.conf
@@ -21,7 +21,7 @@ unbind r
 bind r source-file "~/.config/tmux/tmux.conf"
 
 # mouse support
-set -g mouse on
+# set -g mouse on
 
 # more ergonomic leader
 set -g prefix C-s
