updated comments in config, particularly surrounding licensing for the catppuccin theme

--- a/tmux.conf
+++ b/tmux.conf
@@ -40,7 +40,12 @@ set -g @plugin "tmux-plugins/tpm"
 # set -g @plugin "owner/repo"
 
 # theme
-# modified from https://github.com/catppuccin/tmux?tab=readme-ov-file#config-3
+
+# modified from https://github.com/catppuccin/tmux#config-3, licensed under the MIT License, found at:
+# * https://github.com/catppuccin/tmux/blob/main/LICENSE
+# * https://opensource.org/license/mit
+
+# copyright (c) 2021 Catppuccin
 set -g @plugin "catppuccin/tmux"
 set -g @catppuccin_flavour "mocha"
 
@@ -64,5 +69,5 @@ set -g @catppuccin_status_connect_separator "no"
 
 set -g @catppuccin_directory_text "#{pane_current_path}"
 
-# must be at the very bottom of the file
+# ↓ must be at the end of the file ↓
 run "~/.config/tmux/plugins/tpm/tpm"
