minor formatting changes

--- a/tmux.conf
+++ b/tmux.conf
@@ -26,7 +26,7 @@ bind r source-file "~/.config/tmux/tmux.conf"
 # more ergonomic leader
 set -g prefix C-s
 
-# plugins
+# PLUGINS #
 # all of this should be at the bottom of the file, add all additional config above ^
 
 # will install plugins to $XDG_CONFIG_HOME/tmux/plugins/ or, if that $XDG_CONFIG_HOME/tmux/tmux.confg does not exist, ~/.tmux/plugins
@@ -39,7 +39,7 @@ set -g @plugin "tmux-plugins/tpm"
 # pulls from https://github.com/%s unless specified
 # set -g @plugin "owner/repo"
 
-# theme
+# THEME #
 
 # modified from https://github.com/catppuccin/tmux#config-3, licensed under the MIT License, found at:
 # * https://github.com/catppuccin/tmux/blob/main/LICENSE
