lowered escape time and enabled focus events

--- a/tmux.conf
+++ b/tmux.conf
@@ -26,6 +26,14 @@ bind r source-file "~/.config/tmux/tmux.conf"
 # more ergonomic leader
 set -g prefix C-s
 
+# set escape sequence delay
+# https://github.com/tmux/tmux/wiki/FAQ#what-is-the-escape-time-option-is-zero-a-good-value
+set -sg escape-time 10 # 10ms delay
+
+# pass through focus events
+# allows (neo)vim to correctly 'autoread' file changes
+set -g focus-events on
+
 # PLUGINS #
 # all of this should be at the bottom of the file, add all additional config above ^
 
