--- a/tmux.conf
+++ b/tmux.conf
@@ -55,7 +55,7 @@ set -g @plugin "tmux-plugins/tpm"
 
 # copyright (c) 2021 Catppuccin
 set -g @plugin "catppuccin/tmux"
-set -g @catppuccin_flavour "mocha"
+set -g @catppuccin_flavor "mocha"
 
 set -g @catppuccin_window_left_separator ""
 set -g @catppuccin_window_right_separator " "
