`tmux.conf`: pinned `catppuccin/tmux` to `v0.2`
This is far from the most recent version, but there's a bunch of
breaking changes since and I really don't feel like dealing with thsoe
right now. Hence, I'm pinning to an old version.

--- a/tmux.conf
+++ b/tmux.conf
@@ -54,7 +54,7 @@ set -g @plugin "tmux-plugins/tpm"
 # * https://opensource.org/license/mit
 
 # copyright (c) 2021 Catppuccin
-set -g @plugin "catppuccin/tmux"
+set -g @plugin "catppuccin/tmux#v0.2"
 set -g @catppuccin_flavor "mocha"
 
 set -g @catppuccin_window_left_separator ""
